# alykee

./: .env  .env.sample  .gitignore  AI_USSAGE.md  Cargo.toml  README.md  alkyee.postman_collection.json  docker-compose.yml
.sqlx/: query-077a7712f1945575d2a3a05e2f2aaa8cb4ed9abf494fa599bb92480b692bb3b0.json  query-60ab6ea35902d86cada1004002b9aaabfb7dbc76b47174a05a6cb28d60a8164c.json  query-936a448efcc301d620749f7d873d60af66711b4b626b18a9c61ddab82247e6c5.json  query-a1847c3c03f46a193166eac38d4b299145dedce93ed7dc366c9f563a9b368534.json  query-bcf285ea44d022bd355a0b14fa6fdf13c49910bbe2adc6ad50fbe54429aff5a7.json  query-c46344d67d4a0a7f1c662d55bd7e3f0ac1cd63db60dcfdf8144c15a9c3ed4a71.json  query-f0b26d471ddd4260e27fc1ccef8faac17ed17a93f5663e2710fd1d35df4e6917.json
migrations/: 20260610113814_user.down.sql  20260610113814_user.up.sql
src/: error.rs  main.rs
src/controller/: admin.rs  mod.rs  user.rs
src/middleware/: is_authenticated.rs
src/model/: auth.rs  health_check.rs  mod.rs  tasks.rs  users.rs
src/repository/: tasks.rs  users.rs
src/router/: admin.rs  mod.rs  user.rs
src/service/: auth.rs  db.rs  email.rs  mod.rs
src/service/redis/: client.rs  mod.rs  otp.rs
src/state/: mod.rs
src/utilities/: mod.rs  otp.rs
